# ResumeGPT

./: .dockerignore  .gitignore  Dockerfile  Procfile  README.md  pyproject.toml  render.yaml  requirements.txt
Engineered_Prompt/: Prompt.txt
ResumeGPT/: ChatGPT_Pipeline.py  OCR_Reader.py  __init__.py  api.py  cli.py  core.py  helpers.py  main.py  process.py  prompt.py
ResumeGPT/data/: prompt.txt
resumegpt_venv311/: pyvenv.cfg
